Closed Bug 1858729 Opened 2 years ago Closed 2 years ago

Pdf infobar prompt is not displayed on tab for a specific version of Edge.

Categories

(Firefox :: Installer, defect)

Firefox 120
Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox120 --- wontfix
firefox121 --- wontfix
firefox122 --- fixed

People

(Reporter: mchiorean, Assigned: bytesized)

References

Details

(Whiteboard: [fidedi-ope])

Attachments

(2 files)

Found in

  • version: 120.0a1

Affected versions

  • version: 120.0a1

Tested platforms

  • Affected platforms: Windows only
  • Unaffected platforms: -

Preconditions

  • Preconditions:
  • browser.shell.checkDefaultPDF=TRUE
  • browser.shell.checkDefaultPDF.silencedByUser=FALSE
  • Firefox is default browser.
  • Make sure that the current PDF handler is old Edge version 44.18362.10 (2019)

Steps to reproduce

  1. Have FF default browser.
  2. PDF default app is old Edge version.
  3. Enable nimbus.debug=True
  4. Enroll in experiment (about:studies?optin_slug=set-default-pdf-handler-rollout&optin_branch=treatment-a&optin_collection=nimbus-preview)
  5. In FF open pdf https://www.irs.gov/pub/irs-pdf/f1040.pdf .

Expected result

  • Pdf info bar should be displayed in pdf tab.

Actual result

  • Pdf info bar should is NOT displayed in pdf tab.

Regression range
*Not a regression as this is recently implemented.

Additional notes

  • This happens only with this Edge identifier: AppXd4nrz8ff68srnhf9t5a8sbjyar1cr723.
Severity: -- → S3
Has STR: --- → yes

:mchiorean, if you think that's a regression, could you try to find a regression range using for example mozregression?

I've always been a little confused about this string. All the other ones look basically readable, but pre-Blink Edge just looks like a random jumble of characters. @nalexander - It looks like you wrote this code. Do you think it's worth adding new Edge identifiers as we become aware of them?

I'm concerned that they are being generated somehow and that if we start down the road of just adding new ones as we find them that it may be a never ending process. But on the other hand, it's not clear to me that it would be reasonable to spend the necessary effort to determine how they are generated and it's pretty low effort just to add a new identifier once in a while.

What do you think?

Flags: needinfo?(nalexander)

(In reply to Robin Steuber (they/them) [:bytesized] from comment #2)

I've always been a little confused about this string. All the other ones look basically readable, but pre-Blink Edge just looks like a random jumble of characters.

This jumble of characters is a generated ID for AppX/MSIX packages. We have no documentation but believe that it's stable across package versions and across devices.

@nalexander - It looks like you wrote this code. Do you think it's worth adding new Edge identifiers as we become aware of them?

Yes. This particular identifier seems to be known to the internet (e.g., https://www.winhelponline.com/blog/edge-hijack-pdf-htm-associations/) suggesting that it's been around for a while.

I'm concerned that they are being generated somehow and that if we start down the road of just adding new ones as we find them that it may be a never ending process. But on the other hand, it's not clear to me that it would be reasonable to spend the necessary effort to determine how they are generated and it's pretty low effort just to add a new identifier once in a while.

What do you think?

I think we should add the identifiers that we know of; there aren't likely to be many of them.

Monica: could you say how you installed this version of Edge? What Windows version, etc are you running?

Flags: needinfo?(nalexander) → needinfo?(mchiorean)

I'll write up a quick patch for this.

Assignee: nobody → bytesized

I attached a screenshot with the Windows 10 version that has this version of Edge set as default.

Flags: needinfo?(mchiorean)
Whiteboard: [fidedi-ope]
Pushed by nalexander@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/19b8b7ab3bec Add Edge identifier AppXd4nrz8ff68srnhf9t5a8sbjyar1cr723 r=nalexander
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch

Since nightly and release are affected, beta will likely be affected too.
For more information, please visit BugBot documentation.

The patch landed in nightly and beta is affected.
:bytesized, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox121 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(bytesized)

I don't think this is important enough for an uplift.

Flags: needinfo?(bytesized)
Flags: qe-verify+

We could not check it yet as experiment ended, but we will try to verify it once roll out for everyone.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: