Bug 1858729 - Add Edge identifier AppXd4nrz8ff68srnhf9t5a8sbjyar1cr723 r=nalexander

Differential Revision: https://phabricator.services.mozilla.com/D190982